Updates to event rosters.  The roster has 3 different viewing options.  View paid, non-paid, and and total registrants.  Cancelled registrations are no longer visible from this or another report (yet).

--- a/site_media/static/css/events.css
+++ b/site_media/static/css/events.css
@@ -589,3 +589,24 @@ input#id_regconf-limit {
     list-style-type: none;
     margin-right: 5px;
 }
+
+/*= Roster
+ ------------------------- */
+.count-box {
+    border: 1px solid silver;
+    float: left;
+    padding: 5px;
+    margin-left: 7px;
+}
+.count-box div {
+    text-align: center;
+}
+.roster-view-options {
+    border: 1px solid silver;
+    padding: 5px;
+    margin-left: 7px;
+    float: left;
+}
+.counts {
+    margin-left:8px;
+}
